--- a/src/components/LogoMark.astro
+++ b/src/components/LogoMark.astro
@@ -9,11 +9,10 @@
 interface Props {
   href: string;
   label: string;
-  container?: string;
   onClick?: string;
 }
 
-const {href, label, container = "page", onClick} = Astro.props;
+const {href, label, onClick} = Astro.props;
 ---
 
 <a
