--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,11 @@
 import Prose from "../layouts/Prose.astro";
 ---
 
-<Prose title="About | Sam Folorunsho" description="About Sam Folorunsho." heading="About">
+<Prose
+  title="About | Sam Folorunsho"
+  description="About Sam Folorunsho."
+  heading="About"
+>
   <p class="coming-soon">Coming soon.</p>
 </Prose>
 
