--- a/src/components/FixedFooter.astro
+++ b/src/components/FixedFooter.astro
@@ -7,6 +7,7 @@
  */
 
 import {THEME_LABELS} from "../config/themes";
+
 import {Overline} from "./typography";
 ---
 
@@ -17,7 +18,9 @@ import {Overline} from "./typography";
   transition:name="footer"
 >
   <div class="footer-inner">
-    <Overline id="theme-name" class="theme-name">STEEL GREY + WARM CREAM</Overline>
+    <Overline id="theme-name" class="theme-name"
+      >STEEL GREY + WARM CREAM</Overline
+    >
   </div>
 </footer>
 
