--- a/src/components/JSONLD.astro
+++ b/src/components/JSONLD.astro
@@ -59,4 +59,8 @@ const schema: JSONLDWebSite | JSONLDArticle =
       };
 ---
 
-<script is:inline type="application/ld+json" set:html={JSON.stringify(schema)} />
+<script
+  is:inline
+  type="application/ld+json"
+  set:html={JSON.stringify(schema)}
+/>
