--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -108,7 +108,10 @@ const {
     <ClientRouter />
   </head>
   <body class="@container/page min-h-dvh">
-    <script is:inline define:vars={{THEME_CLASSES, THEME_STORAGE_KEY: STORAGE_KEYS.THEME}}>
+    <script
+      is:inline
+      define:vars={{THEME_CLASSES, THEME_STORAGE_KEY: STORAGE_KEYS.THEME}}
+    >
       (function () {
         const applyStoredTheme = () => {
           const saved = localStorage.getItem(THEME_STORAGE_KEY);
