--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -31,5 +31,5 @@ const posts = allPosts
   description="Writing about AI agents, creative coding, and software engineering."
   heading="Blog"
 >
-  <BlogList posts={posts} />
+  <BlogList slot="before" posts={posts} />
 </Prose>
