refactor: group components semantically (keep it simple)

--- a/src/components/blog/BlogList.astro
+++ b/src/components/blog/BlogList.astro
@@ -6,10 +6,11 @@
  * Posts are shown in reverse chronological order.
  */
 
-import {formatDate} from "../utils/format-date";
+import {formatDate} from "../../utils/format-date";
+
+import {Overline, Body} from "../typography";
 
 import BlogListItem from "./BlogListItem.astro";
-import {Overline, Body} from "./typography";
 
 interface Post {
   title: string;
