--- a/src/components/blog/PostMeta.astro
+++ b/src/components/blog/PostMeta.astro
@@ -6,7 +6,7 @@
  * Items are separated by dot dividers.
  */
 
-import {formatDate} from "../utils/format-date";
+import {formatDate} from "../../utils/format-date";
 
 interface Props {
   publishDate: Date;
