--- a/src/components/blog/PostNav.astro
+++ b/src/components/blog/PostNav.astro
@@ -6,7 +6,7 @@
  * Renders a 2-column grid on desktop, single column on mobile.
  */
 
-import {Overline} from "./typography";
+import {Overline} from "../typography";
 
 interface PostNavLink {
   slug: string;
