--- a/src/components/blog/PostTags.astro
+++ b/src/components/blog/PostTags.astro
@@ -5,7 +5,7 @@
  * Displays a list of tags as pill badges.
  */
 
-import {Overline} from "./typography";
+import {Overline} from "../typography";
 
 interface Props {
   tags: string[];
