--- a/src/components/chrome/FixedFooter.astro
+++ b/src/components/chrome/FixedFooter.astro
@@ -6,9 +6,9 @@
  * Updates dynamically when theme changes.
  */
 
-import {THEME_LABELS} from "../config/themes";
+import {THEME_LABELS} from "../../config/themes";
 
-import {Overline} from "./typography";
+import {Overline} from "../typography";
 ---
 
 <footer
