--- a/src/components/chrome/FixedHeader.astro
+++ b/src/components/chrome/FixedHeader.astro
@@ -6,11 +6,10 @@
  * Contains wordmark, navigation, and theme switcher.
  */
 
-import {NAV_LINKS} from "../config/navigation";
+import {NAV_LINKS} from "../../config/navigation";
 
-import LogoMark from "./LogoMark.astro";
-import Nav from "./Nav.astro";
-import ThemeSwitcher from "./ThemeSwitcher";
+import {LogoMark, Nav} from "../navigation";
+import {ThemeSwitcher} from "../theme";
 ---
 
 <header
