--- a/src/components/hero/Boids.astro
+++ b/src/components/hero/Boids.astro
@@ -10,7 +10,7 @@
 
 <div id="boids-canvas" class="boids-canvas"></div>
 
-<script src="../scripts/boids.ts"></script>
+<script src="../../scripts/boids.ts"></script>
 
 <style>
   .boids-canvas {
