--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -7,11 +7,12 @@
  * to toggle the fixed header visibility.
  */
 
-import {NAV_LINKS} from "../config/navigation";
+import {NAV_LINKS} from "../../config/navigation";
+
+import {Nav} from "../navigation";
+import {Overline, Body} from "../typography";
 
 import HeroWordmark from "./HeroWordmark.astro";
-import Nav from "./Nav.astro";
-import {Overline, Body} from "./typography";
 
 interface Props {
   class?: string;
