--- a/src/components/navigation/Nav.astro
+++ b/src/components/navigation/Nav.astro
@@ -6,7 +6,7 @@
  * Usage-agnostic: positioning and spacing are the parent's responsibility.
  */
 
-import type {NavLink as NavLinkType} from "../config/navigation";
+import type {NavLink as NavLinkType} from "../../config/navigation";
 
 import NavLink from "./NavLink.astro";
 
