--- a/src/components/seo/JSONLD.astro
+++ b/src/components/seo/JSONLD.astro
@@ -7,14 +7,14 @@
  * - Article schema for blog posts
  */
 
-import {SITE} from "../config";
+import {SITE} from "../../config";
 import type {
   JSONLDArticle,
   JSONLDArticleData,
   JSONLDPerson,
   JSONLDType,
   JSONLDWebSite,
-} from "../types";
+} from "../../types";
 
 interface Props {
   type: JSONLDType;
