--- a/src/components/seo/SEO.astro
+++ b/src/components/seo/SEO.astro
@@ -10,9 +10,9 @@
  * - RSS feed discovery
  */
 
-import {SITE} from "../config";
-import {OG_DEFAULT_PATH} from "../lib/og";
-import type {OGType} from "../types";
+import {SITE} from "../../config";
+import {OG_DEFAULT_PATH} from "../../lib/og";
+import type {OGType} from "../../types";
 
 interface Props {
   title: string;
