--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -8,11 +8,9 @@
 
 import {ClientRouter} from "astro:transitions";
 
-import FixedFooter from "../components/FixedFooter.astro";
-import FixedHeader from "../components/FixedHeader.astro";
-import JSONLD from "../components/JSONLD.astro";
-import SEO from "../components/SEO.astro";
-import ThemeSwitcher from "../components/ThemeSwitcher";
+import {FixedFooter, FixedHeader} from "../components/chrome";
+import {JSONLD, SEO} from "../components/seo";
+import {ThemeSwitcher} from "../components/theme";
 import {STORAGE_KEYS} from "../config/storage";
 import {THEME_CLASSES} from "../config/themes";
 import type {Theme} from "../config/themes";
