--- a/src/layouts/Prose.astro
+++ b/src/layouts/Prose.astro
@@ -11,7 +11,7 @@
  *   - after: Content after the prose body (e.g., PostNav)
  */
 
-import SheenText from "../components/SheenText.astro";
+import {SheenText} from "../components/typography";
 import {LARGE_SHEEN} from "../config/sheen";
 import type {OGType} from "../types";
 
