--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,8 @@
 
 import {getCollection} from "astro:content";
 
-import BlogList from "../components/BlogList.astro";
-import Boids from "../components/Boids.astro";
-import Hero from "../components/Hero.astro";
+import {BlogList} from "../components/blog";
+import {Boids, Hero} from "../components/hero";
 import Base from "../layouts/Base.astro";
 
 // Fetch published posts from content collection
