--- a/src/components/hero/HeroWordmark.astro
+++ b/src/components/hero/HeroWordmark.astro
@@ -7,9 +7,9 @@
  * to toggle fixed header visibility.
  */
 
-import {LARGE_SHEEN} from "../config/sheen";
+import {LARGE_SHEEN} from "../../config/sheen";
 
-import SheenText from "./SheenText.astro";
+import {SheenText} from "../typography";
 
 interface Props {
   class?: string;
