--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,7 @@
 
 import {getCollection} from "astro:content";
 
-import BlogList from "../../components/BlogList.astro";
+import {BlogList} from "../../components/blog";
 import Prose from "../../layouts/Prose.astro";
 
 // Fetch all non-draft posts (or all posts in development)
