--- a/src/components/typography/Overline.astro
+++ b/src/components/typography/Overline.astro
@@ -18,7 +18,7 @@ import type {BaseTypographyProps} from "./types";
 /**
  * Props for the Overline component.
  */
-interface Props extends BaseTypographyProps, HTMLAttributes<"span"> {}
+interface Props extends BaseTypographyProps, Omit<HTMLAttributes<"span">, "color"> {}
 
 const {
   tag: Tag = "span",
